--- a/react-covid/src/components/Footer/Footer.module.css
+++ b/react-covid/src/components/Footer/Footer.module.css
@@ -17,6 +17,11 @@
   margin-bottom: 1rem;
   text-align: center;
 }
+.footer__author {
+  font-style: 200;
+  font-size: 16px;
+  text-align: center;
+}
 .footer__list {
   font-size: 25px;
   font-weight: 400;
