--- a/react-covid/src/components/Provinces/Provinces.module.css
+++ b/react-covid/src/components/Provinces/Provinces.module.css
@@ -16,6 +16,9 @@
   font-size: 1.59rem;
   text-align: center;
 }
+.provinces_container {
+  overflow-x: auto;
+}
 .provinces_table {
   margin: 0 auto;
   width: 80%;
